css/GDP.css
ul {
    position: fixed;
    list-style-type: none;
    margin: 0;
    padding: 0;
    width: 200px;
    background-color: rgba(17, 17, 17, 0);
}

li a {
    display: block;
    color: white;
    padding: 8px 16px;
    text-decoration: none;
}

/* Change the link color on hover */
li a:hover {
    color:dimgrey;
}

h1 {
    margin-bottom: 0%;
    font-size: 1in;
    color: white;
    text-align:center;
    }
    body{
        background-color:rgba(34, 34, 34, 0.884);
         }
    .home-background{
        background-image: url("https://larsonbeck.files.wordpress.com/2017/11/cropped-untitled.png");
        background-size: cover;
    }
    .namelisted{
        text-align: center;
        color: white;
    }
    /* .cofferender{
        position: absolute;
        margin-left:0;
       width: 60em;
        height:105%;
        z-index:-1;
    } */
    img.aboutpic{
       width: 30em;
       position: absolute;
       left: 35%;
       top: 5%;
       margin-left: -50px; /*half the image width*/
       margin-top: -50px;
        
    }
    .nav-bar{
        color: white;
    }
    .container {
        position: relative; 
        max-width: 100%; /* Maximum width */
        width: 100%;
        margin: auto; /* Center it */
        z-index: -1;
    }
    
    .container .content {
        position: absolute; /* Position the background text */
        bottom: 0; /* At the bottom. Use top:0 to append it to the top */
        background: rgba(0, 0, 0, 0.748); /* Black background with 0.5 opacity */
        color: #f1f1f1; /* Grey text */
        width: 100%; /* Full width */
        padding: 0px; /* Some padding */
    }
    .image1{
        position: relative;
        width: 100%;
        float: right;
        z-index: -1;
    }
    .content-1{
        text-align: center;
        float: right;
        position: relative; /* Position the background text */
        bottom: 0; /* At the bottom. Use top:0 to append it to the top */
        background: rgba(0, 0, 0, 0.5); /* Black background with 0.5 opacity */
        color: #f1f1f1; /* Grey text */
        width: 100%; /* Full width */
        padding: 0px; /* Some padding */
    }
    .discription{
    
        text-align: center;
    }
    .about-txt{
        text-align: center;
        color: white;
        position: relative;
    top: 2%;
    }
    #contact{
        font-size: .5in;
    }
   

